# aixcc-afc-archive

./: .dockerignore  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  README.md  build.sh  create_round_tasks.py  create_tasks.py  crs_flake8.py  docker-compose.yml  eval.py  full-sim.sh  generate_tokens.sh  main.py  pyproject.toml  round_sim.py  run-crs.sh  run-evals.sh  run-linters.sh  run-terraform-checks.sh  run-tests.sh
agent-log-viewer/: README.md  index.html  package-lock.json  package.json  vite.config.js
agent-log-viewer/src/: AgentLogViewer.css  AgentLogViewer.jsx  App.jsx  logProcessor.js
configs/: models-anthropic.toml  models-best-no-azure.toml  models-best.toml  models-final.toml  models-jun22.toml  models-jun23.toml  models-none.toml  models-openai.toml  models-round-3.toml  models-very-weak.toml  models-weak.toml  new_vuln_commits_250523.json
crs/: __init__.py  config.py  gitattributes  gtags.conf  jazzer_sanitizer_summary.json
crs/agents/: agent.py  agent_meta.py  branch_flipper.py  classifier.py  crsbase.py  diff_analyzer.py  dynamic_debug.py  func_summarizer.py  generate_kaitai.py  harness_input_decoder.py  pov_producer.py  produce_patch.py  source_questions.py  tool_required_agent.py  triage.py  vuln_analyzer.py  xml_agent.py
crs/analysis/: c_tree_sitter.py  data.py  full.py  integration.py  java_tree_sitter.py  parser.py  vfs_loader.py
crs/app/: api_task.py  app.py  app_meta.py  client.py  counter_db.py  helpers.py  models.py  products_db.py  quantile.py  submitter.py
crs/common/: aio.py  alru.py  azure.py  constants.py  core.py  diff_utils.py  docker.py  fuzzy_patch.py  joern.py  latency.py  llm_api.py  oneshot.py  path.py  process.py  prompts.py  read_source.py  sarif_model.py  scheduler.py  shield.py  sqlite.py  types.py  utils.py  workdb.py  workdb_meta.py
crs/eval/: README.md  __init__.py  ingest.py  label.py  pov_produce.py  vuln_score.py
crs/modules/: coverage.py  debugger.py  fuzzing.py  graph.py  kaitai.py  project.py  python_sandbox.py  sarif.py  search_code.py  source_editor.py  static_analysis.py  testing.py
crs/task_server/: app.py  db.py  models.py
docs/: README.md  arvo-projects.md  crs-architecture.md  projects.md
experiments/: __init__.py  code_editing.py  debug_pov_calls.json
infra/: backup.sh  crs-copy-logs.service  crs-copy-logs.timer  crs-task-server.service  crs.service  devbox_setup.sh  poll_logs.sh  process_logs.py
infra/terraform/: .gitignore  llm.tf  main.tf  provider.tf  ssh  terraform.tf  user-data.yml  variables.tf
projects/afc-commons-compress/: CompressTarFuzzer.options  Dockerfile  ExpanderFuzzer.java  deploy_key  deploy_key.pub  project.yaml  test.sh
projects/afc-freerdp/: Dockerfile  deploy_key  deploy_key.pub  project.yaml  test.sh
projects/afc-integration-test/: Dockerfile  deploy_key  deploy_key.pub  project.yaml
projects/afc-libxml2/: Dockerfile  deploy_key  deploy_key.pub  project.yaml  test.sh
projects/afc-sqlite3/: Dockerfile  deploy_key  deploy_key.pub  project.yaml  test.sh
projects/afc-zookeeper/: Dockerfile  deploy_key  deploy_key.pub  project.yaml  test.sh
projects/curl-theori/: Dockerfile  apply_commits.sh  build.sh  project.yaml
projects/example-libpng-theori/: Dockerfile  deploy_key  deploy_key.pub  project.yaml  test.sh
projects/nginx-asc/: Dockerfile  build.sh  (+2 more)
prompts/: default.yaml
src/: crs_rust.pyi  http.rs  lib.rs  log.rs  metrics.rs  patch.rs  path_suffix.rs
tests/: conftest.py
utils/: dedup_mon.py  harness_match.py  load_options.sh  path_suffix_tree.py  rle.py  theori_compile.sh  unpack_git.sh
utils/jacoco_parser/: Cargo.toml  Makefile
utils/jacoco_parser/src/: main.rs
utils/lcov_parser/: Cargo.toml  Makefile
utils/lcov_parser/src/: main.rs
(+266 files in other folders)
