[package]
name = "aixcc"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
chrono = "0.4.41"
file-rotate = "0.8.0"
influxdb = "0.7.2"
ndarray = "0.16.1"
pyo3 = "0.23.5"
reqwest = "0.12.18"
serde_json = { version = "1.0.140", features = ["std"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }