[package]
name    = "jacoco_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1"
bincode     = "1"
clap        = { version = "4", features = ["derive"] }
memmap2     = "0.9"
mimalloc    = "0.1"
num-bigint  = "0.4"
num-traits  = "0.2"
quick-xml   = "0.31"
rayon       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"