[package]
name = "lcov_parser"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow      = "1"
base64      = "0.22"
bstr        = "1"
clap        = { version = "4", features = ["derive"] }
mimalloc    = "0.1"
memmap2     = "0.9"
num-bigint  = "0.4"
num-traits  = "0.2"
rayon       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode = "1"